# MP3Reader

./: .gitignore  CMakeLists.txt  HuffmanTables.hpp  MP3Decoder.cpp  MP3Decoder.hpp  README.md  ScaleFactorBandTables.hpp  main.cpp
MP3/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  Decoder_s.hpp  Helper.cpp  Helper.hpp  Helper_s.hpp
MP3/Frame/: Frame.cpp  Frame.hpp  Frame_s.hpp  Header.cpp  Header.hpp  SideInformation.cpp  SideInformation.hpp  SideInformation_s.hpp
MP3/Frame/Data/: Frame.hpp  Header.hpp  HuffmanTables.hpp  ScaleFactorBands.hpp  SideInformation.hpp  SynthesisFilterBank.hpp  SynthesisWindow.hpp
